--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,13 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="add_goal_to_be_achieved">Add goal to be achieved</string>
+    <string name="title">Title</string>
+    <string name="enter_goal_title">Enter goal title</string>
+    <string name="description">Description</string>
+    <string name="enter_goal_description">Enter goal description</string>
+    <string name="start_dte">Start dte</string>
+    <string name="_01_12_2021">01/12/2021</string>
+    <string name="save">SAVE</string>
+    <string name="end_date">End date</string>
 </resources>
